# audioevals

./: .gitignore  README.md  pyproject.toml
src/audioevals/: run_evals.py
src/audioevals/evals/: nisqa_eval.py  pitch_eval.py  vad_eval.py
src/audioevals/utils/: common.py
src/audioevals/utils/nisqa/: NISQA_lib.py  nisqa.py
tests/: pitch.ipynb
