[project]
name = "audioevals"
version = "0.6.2"
description = "Effective evaluations for Text-to-Speech (TTS) systems"
readme = "README.md"
authors = [
    { name = "Sayan Jyoti Das", email = "sayanjyotidasworkmail@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.14",
    "audiobox-aesthetics>=0.0.4",
    "av>=15.0.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy>=2.2.1",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.1",
    "praat-parselmouth>=0.4.6",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "soxr>=0.5.0.post1",
    "tqdm>=4.67.1",
]

[project.scripts]
audioevals = "audioevals.run_evals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/audioevals"]

[tool.hatchling.build]
exclude = [
    "tests/",
    "data/",
    "data/*"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
]
